# KTB4-Hector-AI

./: README.md  main.py  pyproject.toml
01/: main.py
02/: .env  README.md  community.sql  database.py  main.py  pyproject.toml  store.py  test_client.py
02/controllers/: ai_controller.py  comment_controller.py  post_controller.py  user_controller.py
02/models/: comment_model.py  post_like_model.py  post_model.py  user_model.py
02/routers/: ai_router.py  comment_router.py  post_router.py  user_router.py
02/schemas/: ai_schema.py  comment_schema.py  post_schema.py  user_schema.py
04/: 04.ipynb  ReadMe.md
05/: 05.ipynb  README.md
07/: .gitignore  README.md  baseline.py  main.py  pyproject.toml
07/notes/: messi.md  son.md  worldcup.md
online_law/: .gitignore  README.md  graph.py  main.py  pyproject.toml  vectordb.py
