[project]
name = "02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "starlette>=1.0.0",
    "uvicorn>=0.47.0",
    "uvicorn-worker>=0.4.0",
]
