[project]
name = "02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.47.0",
    "uvicorn-worker>=0.4.0",
]
