[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=0.3.0",
    "langsmith>=0.9.1",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=1.2.6",
    "mcp>=1.28.1",
    "langchain-anthropic>=1.4.8",
    "pypdf>=6.14.2",
    "beautifulsoup4>=4.15.0",
    "unstructured>=0.24.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
]
